--- a/entry 10/index.html
+++ b/entry 10/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="#" class="next"> HOME</a>
+        <a href="../../HOME-page-/Homepage/index.html" class="next"> HOME</a>
     </div>
     <div class="indie">
         <h1> I guess this is goodbye...</h1>
